[package]
name = "tracing_sprout"
version = "0.1.0"
authors = ["Naaman <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
json = "^0.12"
thiserror = "^1.0"

tracing = "^0.1"
tracing-core = "^0.1"
tracing-log = "^0.1"
tracing-subscriber = "^0.2"
