[package]
name = "tracing_sprout"
version = "0.1.0-alpha.1"
authors = ["Naaman <naaman.the.dev@gmail.com>"]
edition = "2018"
description = "A tokio-rs/tracing structured JSON formatting layer for the fledgling logger"
readme = "readme.md"
keywords = ["tracing", "tokio/tracing", "logging"]
license = "MIT"
repository = "https://github.com/naamancurtis/tracing-sprout"
categores = ["development-tools::debugging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
json = "^0.12"
thiserror = "^1.0"

tracing = "^0.1"
tracing-core = "^0.1"
tracing-log = "^0.1"
tracing-subscriber = "^0.2"
